# LabWork7

./: CMakeLists.txt
LabWork7/: CMakeLists.txt  LabWork7.cpp  LabWork7.h
